[package]
name = "negentropy"
version = "0.1.0+taxus-baccata"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.4", default-features = false }
aws-sdk-s3 = { version = "1.41.0", default-features = false }
futures = "0.3.30"
gxhash = "3.4.1"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.2", features = ["macros", "rt"] }
