[package]
name = "negentropy"
version = "0.1.0+taxus-baccata"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.4" }
aws-sdk-s3 = { version = "1.41.0" }
directories = "5.0.1"
futures = "0.3.30"
gxhash = { version = "3.4.1", optional = true }
lru = "0.12.4"
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"], optional = true }
serde_json = { version = "1.0.120", optional = true }
tokio = { version = "1.39.2", features = ["macros", "rt"] }
toml = "0.8.17"
uuid = { version = "1.10.0", features = [
  "fast-rng",
  "macro-diagnostics",
  "v4",
  "serde",
] }

[features]
default = []
prod = ["gxhash"]
copy = ["serde", "serde_json"]
